--- a/src/app/authors/components/authors-list/authors-list.component.html
+++ b/src/app/authors/components/authors-list/authors-list.component.html
@@ -1,14 +1,14 @@
 <app-search debounce="1000" (searchValue)="getAuthors(1, $event)"></app-search>
 
-<div class="container">
+<div class="container mt-3 mb-3">
 
   <h3>List of all authors:</h3>
   <button mat-stroked-button color="primary" class="add-author" routerLink="create">Add new author</button>
-  <ul>
+  <ul class="mt-3">
     <li *ngFor="let author of authors ">
-      <img src="../assets/images/author.jpg">
-      <a routerLink="{{ author.id }}">{{ author.first_name }} {{ author.last_name }}</a>
-      <button mat-stroked-button color="primary" class="deleteButton" (click)="deleteAuthor(author.id)">Delete author</button>
+      <img class="w-25 mb-3 mr-3" src="../assets/images/author.jpg">
+      <a class="" routerLink="{{ author.id }}">{{ author.first_name }} {{ author.last_name }}</a>
+      <button mat-stroked-button color="primary" type="button" class="deleteButton" (click)="deleteAuthor(author.id)">Delete author</button>
     </li>
   </ul>
 
