--- a/src/app/shared/components/author-form/author-form.component.css
+++ b/src/app/shared/components/author-form/author-form.component.css
@@ -1,25 +1,7 @@
-form {
-  margin-top: 20px;
-  margin-left: 20px;
-  width: 800px;
+.back-button:hover {
+  background-color: rgba(132, 111, 148, 0.6);
 }
 
-mat-form-field {
-  width: 800px;
+button {
+  outline: none;
 }
-
-.formButton {
-  margin: 0 5px;
-}
-
-.buttonController {
-  margin-left: 300px;
-}
-
-mat-card {
-  margin-top: 10px;
-  margin-left: 10px;
-  width: 900px;
-}
-
-
