add price component and add it to book search

--- a/src/app/authors/components/author-detail/author-detail.component.html
+++ b/src/app/authors/components/author-detail/author-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-3">
+<div class="container">
   <button mat-stroked-button color="primary" type="button" class="back-button" (click)="goBack()">Back</button>
   <div>
   <p><b>{{ author.first_name }} {{ author.last_name | uppercase }}</b></p>
