--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -7,7 +7,9 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <router-outlet></router-outlet>
+    <div class="container-fluid pt-2 pb-2">
+      <router-outlet></router-outlet>
+    </div>
     <app-toaster></app-toaster>
   </mat-sidenav-content>
 </mat-sidenav-container>
