--- a/src/app/shared/components/author-form/author-form.component.html
+++ b/src/app/shared/components/author-form/author-form.component.html
@@ -1,7 +1,7 @@
-<div class="container mt-3">
+<div class="container">
   <button mat-stroked-button color="primary" type="button" class="back-button mb-3" (click)="goBack()">Back</button>
 
-  <mat-card class="mb-3 w-75">
+  <mat-card class="mb-3">
 
   <mat-card-title>Reactive Form</mat-card-title>
 
@@ -12,7 +12,7 @@
 
   </mat-card>
 
-  <mat-card class="w-75">
+  <mat-card class="">
 
   <mat-card-title>Template-driven Form</mat-card-title>
 
