--- a/src/app/authors/components/authors-list/authors-list.component.css
+++ b/src/app/authors/components/authors-list/authors-list.component.css
@@ -1,8 +1,3 @@
-/*.container {*/
-/*  display: flex;*/
-/*  flex-direction: column;*/
-/*}*/
-
 .container h3 {
   color: #666666;
 }
@@ -35,4 +30,8 @@ app-pagination {
 
 button {
   outline: none;
+}
+
+img {
+  max-width: 200px;
 }
