--- a/src/app/authors/components/authors-list/authors-list.component.html
+++ b/src/app/authors/components/authors-list/authors-list.component.html
@@ -1,17 +1,45 @@
-<app-search debounce="1000" (searchValue)="getAuthors(1, $event)"></app-search>
+<mat-accordion>
+  <mat-expansion-panel expanded="true">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Search
+      </mat-panel-title>
+      <mat-panel-description>
+        Search Authors
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <app-search debounce="1000" (searchValue)="getAuthors(1, $event)"></app-search>
+  </mat-expansion-panel>
+</mat-accordion>
 
 <div class="container mt-3 mb-3">
 
   <h3>List of all authors:</h3>
   <button mat-stroked-button color="primary" class="add-author" routerLink="create">Add new author</button>
-  <ul class="mt-3">
-    <li *ngFor="let author of authors ">
-      <img class="w-25 mb-3 mr-3" src="../assets/images/author.jpg">
-      <a class="" routerLink="{{ author.id }}">{{ author.first_name }} {{ author.last_name }}</a>
-      <button mat-stroked-button color="primary" type="button" class="deleteButton" (click)="deleteAuthor(author.id)">Delete author</button>
-    </li>
-  </ul>
+  <table mat-table [dataSource]="authors" class="w-100 mt-3 mb-3">
+    <ng-container matColumnDef="authorLogo">
+      <th mat-header-cell *matHeaderCellDef> Author's photo </th>
+      <td mat-cell *matCellDef="let author">
+        <img src="../assets/images/author.jpg">
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="authorName">
+      <th mat-header-cell *matHeaderCellDef> Author's name </th>
+      <td mat-cell *matCellDef="let author">
+        <a routerLink="{{ author.id }}">{{ author.first_name }} {{ author.last_name }}</a>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="deleteButton">
+      <th mat-header-cell *matHeaderCellDef> Delete author </th>
+      <td mat-cell *matCellDef="let author">
+        <button mat-stroked-button color="primary" type="button" class="deleteButton" (click)="deleteAuthor(author.id)">Delete author</button>
+      </td>
+    </ng-container>
 
-  <app-pagination [receivedMeta]="requestMeta" (selectPage)="getAuthors($event, title)"></app-pagination>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <app-pagination [receivedMeta]="requestMeta" (selectPage)="getAuthors($event)"></app-pagination>
 
 </div>
