--- a/src/app/shared/components/book-form/book-form.component.html
+++ b/src/app/shared/components/book-form/book-form.component.html
@@ -1,29 +1,53 @@
-<div class="container mt-3">
+<div class="container">
   <button mat-stroked-button color="primary" type="button" class="back-button mb-3" (click)="goBack()">Back</button>
 
-  <mat-card class="w-75">
+  <mat-card>
 
-    <form [formGroup]="bookForm" (ngSubmit)="onSubmit(bookForm.value)" class="w-100">
+    <form [formGroup]="bookForm" (ngSubmit)="onSubmit(bookForm.value)" class="row">
 
-<!-- BOOK'S TITLE -->
-      <mat-form-field class="w-100">
+      <!-- Book's Title -->
+      <mat-form-field class="col-12">
         <mat-label>Enter book's title:</mat-label>
-        <input matInput id="title" name="title" type="text" formControlName="title">
+        <input matInput id="title" name="title" type="text" formControlName="title" required>
         <mat-error *ngIf="title.touched && title.invalid && title.errors.required">
           Book's title is required.
         </mat-error>
       </mat-form-field>
 
-<!--  BOOK'S DESCRIPTION-->
-      <mat-form-field class="w-100">
+      <!-- Book's Description-->
+      <mat-form-field class="col-12">
         <mat-label>Enter book's description:</mat-label>
-        <textarea matInput id="description" name="description" type="text" formControlName="description"></textarea>
+        <textarea matInput id="description" name="description" type="text" formControlName="description" required></textarea>
         <mat-error *ngIf="description.touched && description.invalid && description.errors.required">
           Book's description is required.
         </mat-error>
       </mat-form-field>
 
-      <div class="buttonController mx-auto">
+      <!-- Publishing Date -->
+      <mat-form-field class="col-7">
+        <mat-label>Enter book's publishing date</mat-label>
+        <input matInput [matDatepicker]="dp1" formControlName="datePublishing" placeholder="mm/dd/yyyy" required>
+        <mat-datepicker-toggle matSuffix [for]="dp1"></mat-datepicker-toggle>
+        <mat-datepicker #dp1 disabled="false"></mat-datepicker>
+        <mat-error *ngIf="datePublishing.touched && datePublishing.invalid && datePublishing.errors.required">
+          Publishing date is required.
+        </mat-error>
+      </mat-form-field>
+
+      <!-- Publisher Phone Number -->
+      <mat-form-field class="col-7">
+        <mat-label>Enter publisher phone number</mat-label>
+        <input matInput
+               type="text" name="phoneNumber"
+               formControlName="phoneNumber"
+               [textMask]="{mask: phoneNumberMask}"
+               placeholder="x(xxx)-xxx-xx-xx" required>
+        <mat-error *ngIf="phoneNumber.touched && phoneNumber.invalid && phoneNumber.errors.required">
+          Publisher phone number date is required.
+        </mat-error>
+      </mat-form-field>
+
+      <div class="buttonController col-12">
         <button mat-stroked-button color="primary" type="submit" [disabled]="bookForm.invalid" class="button mr-3">Submit</button>
         <button mat-stroked-button color="primary" type="reset" class="button" (click)="clearBookForm()">Clear</button>
       </div>
