--- a/src/app/books/components/books-list/books-list.component.html
+++ b/src/app/books/components/books-list/books-list.component.html
@@ -36,8 +36,8 @@
       <p class="book-title">{{ book.title }}</p>
       <p>{{ book.description }}</p>
       <p>{{ book.price | currency }}</p>
-      <p>Publication date: </p>
-      <p>Publisher phone number: </p>
+      <p>Publication date: ___</p>
+      <p>Publisher phone number: ___</p>
       <button mat-stroked-button color="primary" type="button" (click)="openBookDetail(book)">Click Here for Some Detail</button>
     </div>
   </div>
