add genres from server and authorization component

--- a/src/app/books/components/book-search/book-search.component.html
+++ b/src/app/books/components/book-search/book-search.component.html
@@ -19,8 +19,11 @@
   <app-genres-custom-control formControlName="bookGenres" class="col-12 pl-0"></app-genres-custom-control>
 
   <div class="col-12">
-    <button mat-stroked-button color="primary" type="submit" [disabled]="bookSearchForm.invalid">
+    <button mat-stroked-button color="primary" type="submit" [disabled]="bookSearchForm.invalid" class="mr-3">
       Search
+    </button>
+    <button mat-stroked-button color="primary" type="reset" (click)="clearSearchForm()">
+      Clear
     </button>
   </div>
 </form>
