--- a/src/libs/custom-control-value-accessor/phone-custom-control/components/phone-custom-control.component.html
+++ b/src/libs/custom-control-value-accessor/phone-custom-control/components/phone-custom-control.component.html
@@ -3,5 +3,6 @@
   <input matInput
          type="text" name="phoneNumber"
          [textMask]="{mask: phoneNumberMask}"
+         [(ngModel)]='value'
          placeholder="x(xxx)-xxx-xx-xx">
 </mat-form-field>
