--- a/src/app/layout/sidenav/sidenav.component.css
+++ b/src/app/layout/sidenav/sidenav.component.css
@@ -10,7 +10,7 @@
 .side-nav-bar {
   padding: 10px;
   width: 20%;
-  background-color: #c6a8f0;
+  background: linear-gradient(to bottom right, #51076e, #9923dd);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,5 +21,5 @@
 }
 
 .side-nav-bar .active {
-  color: #8a820c;
+  color: #d7b6ec;
 }
