--- a/src/app/authorization/components/authorization.component.html
+++ b/src/app/authorization/components/authorization.component.html
@@ -1,3 +1,21 @@
-<p>
-  authorization works!
-</p>
+<mat-card>
+ 
+  <form [formGroup]="loginForm" class="row" (ngSubmit)="logIn()">
+ 
+    <mat-form-field class="col-12">
+      <mat-label>Enter your login:</mat-label>
+      <input matInput type="text" formControlName="login" required>
+    </mat-form-field>
+ 
+    <mat-form-field class="col-12">
+      <mat-label>Enter your password:</mat-label>
+      <input matInput type="password" formControlName="password" required>
+    </mat-form-field>
+ 
+    <div class="col-12">
+      <button mat-stroked-button color="primary" type="submit" [disabled]="loginForm.invalid" class="button">Log In</button>
+    </div>
+ 
+  </form>
+
+</mat-card>
