add registration component

--- a/src/app/authorization/components/authorization.component.html
+++ b/src/app/authorization/components/authorization.component.html
@@ -17,5 +17,8 @@
     </div>
  
   </form>
+  <mat-nav-list>
+    <a mat-list-item routerLink="/registration" class="toRegistrate">Registrate</a>
+  </mat-nav-list>
 
 </mat-card>
