add validations for registration component

--- a/src/app/registration/components/registration.component.css
+++ b/src/app/registration/components/registration.component.css
@@ -10,3 +10,12 @@ button:disabled {
   button {
     outline: none;
   }
+
+  .invalid mat-hint,
+  .invalid mat-label {
+    color: red;
+  }
+
+  :host/deep/ .invalid .mat-form-field-underline {
+    background-color: red;
+  }
