--- a/src/app/authorization/components/authorization.component.html
+++ b/src/app/authorization/components/authorization.component.html
@@ -5,11 +5,17 @@
     <mat-form-field class="col-12">
       <mat-label>Enter your login:</mat-label>
       <input matInput type="text" formControlName="login" required>
+      <mat-error *ngIf="login.hasError('required')">
+        Login is required.
+      </mat-error>
     </mat-form-field>
  
     <mat-form-field class="col-12">
       <mat-label>Enter your password:</mat-label>
       <input matInput type="password" formControlName="password" required>
+      <mat-error *ngIf="password.hasError('required')">
+        Password is required.
+      </mat-error>
     </mat-form-field>
  
     <div class="col-12">
