--- a/src/app/registration/components/registration.component.html
+++ b/src/app/registration/components/registration.component.html
@@ -3,18 +3,46 @@
   
     <mat-form-field class="col-12">
       <mat-label>Enter login:</mat-label>
-      <input matInput type="text" formControlName="login">
-    </mat-form-field>
-  
-    <mat-form-field class="col-12">
-      <mat-label>Enter passwod:</mat-label>
-      <input matInput type="password" formControlName="password">
+      <input matInput type="text" formControlName="login" required>
+      <mat-error *ngIf="login.hasError('required')">
+        Login is required.
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field class="col-12">
-      <mat-label>Confirm password:</mat-label>
-      <input matInput type="password" formControlName="confirmPassword">
+      <mat-label>Enter email:</mat-label>
+      <input matInput type="text" formControlName="email" required>
+      <mat-error *ngIf="email.hasError('required')">
+        Email is required.
+      </mat-error>
+      <mat-error *ngIf="email.hasError('email')">
+        Please enter email in right form.
+      </mat-error>
     </mat-form-field>
+  
+    <div [formGroup]="passwords" class="col-12 pl-0" [ngClass]="passwords.hasError('not-same') ? 'invalid' : ''">
+      <mat-form-field class="col-12">
+        <mat-label>Enter passwod:</mat-label>
+          <input matInput type="password" formControlName="password" required>
+        <mat-error *ngIf="password.hasError('required')">
+          Password is required.
+        </mat-error>
+        <mat-hint *ngIf="passwords.hasError('not-same')">
+          Passwords are not the same.
+        </mat-hint>
+      </mat-form-field>
+
+      <mat-form-field class="col-12">
+        <mat-label>Confirm password:</mat-label>
+        <input matInput type="password" formControlName="confirmPassword" required>
+        <mat-error *ngIf="confirmPassword.hasError('required')">
+          Confirm password is required.
+        </mat-error>
+        <mat-hint *ngIf="passwords.hasError('not-same')">
+          Passwords are not the same.
+        </mat-hint>
+      </mat-form-field>
+    </div>
 
     <div class="col-12">
       <button mat-stroked-button color="primary" type="submit" [disabled]="registrationForm.invalid" class="button">Registrate</button>
