fix problem with toastr

--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -11,7 +11,7 @@
   <mat-sidenav-content>
     <div class="container-fluid pt-2 pb-2">
       <router-outlet></router-outlet>
-      <app-toaster class="toastr"></app-toaster>
     </div>
+    <app-toastr class="toastr"></app-toastr>
   </mat-sidenav-content>
 </mat-sidenav-container>
