--- a/src/libs/toastr/components/toastr/toastr.component.css
+++ b/src/libs/toastr/components/toastr/toastr.component.css
@@ -1,18 +1,15 @@
-.toast {
+.toastr {
+  background-color: #d4edda;
+  width: 300px;
+  height: 90px;
+  color: #155724;
+  border: 1px solid transparent;
+  border-color: #c3e6cb;
+  border-radius: 10px;
+  padding: 5px 10px;
+  animation: move 2s both;
   position: fixed;
   right: 0;
-  width: 300px;
-  height: 80px;
-  padding: .75rem 1.25rem;
-  border: 1px solid transparent;
-  border-radius: .25rem;
-  animation: move 2s both;
-}
-
-.toast-success {
-  color: #155724;
-  background-color: #d4edda;
-  border-color: #c3e6cb;
 }
 
 .toast-heading {
