--- a/src/libs/form-components/components/dates-form/dates-form.component.scss
+++ b/src/libs/form-components/components/dates-form/dates-form.component.scss
@@ -3,6 +3,6 @@
   color: #ff0000;
 }
 
-/deep/ .invalid .mat-form-field-underline {
+:host .invalid .mat-form-field-underline {
   background-color: #ff0000;
 }
